--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 
     /* Layout */
     .board {
-      width: min(96vw, 1600px);
-      aspect-ratio: 16/9;
+      /* Fit inside the viewport, never exceed 1024×576, always 16:9 */
+      width: min(100vw, 1024px, calc(100vh * (16/9)));
+      aspect-ratio: 16 / 9;
+      height: auto;
+
       background: #000000d0;
       border-radius: 24px;
       box-shadow: 0 20px 60px rgba(0,0,0,.45) inset, 0 10px 30px rgba(0,0,0,.35);
