--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
       --accent: #e53935;
       --digit-shadow: 0 0 12px rgba(255,255,255,0.15);
     }
-    html, body { height: 100%; }
+
+    *, *::before, *::after { box-sizing: border-box; }
+    html, body {
+      width: 100%;
+      max-width: 100%;
+      overflow-x: hidden;   /* <- hide any horizontal scroll */
+    }
     body {
       margin: 0;
       font-family: 'Droid Sans Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, 'Liberation Mono', 'Courier New', monospace;
@@ -28,7 +34,7 @@
     /* Layout */
     .board {
       /* Fit inside the viewport, never exceed 1024×576, always 16:9 */
-      width: min(100vw, 1024px, calc(100vh * (16/9)));
+      width: min(100dvw, 1024px, calc(100vh * (16/9)));
       aspect-ratio: 16 / 9;
       height: auto;
 
