--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       padding: clamp(8px, 2vw, 24px);
       display: grid;
       grid-template-rows: auto 1fr auto;
+      background: rgba(13, 71, 161, 0.92); /* blue with slight transparency */
     }
 
     /* Top row: logos + game clock */
