--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       letter-spacing: .04em;
       text-shadow: var(--digit-shadow);
       font-weight: 700;
-      font-size: clamp(28px, 6vw, 86px);
+      font-size: clamp(28px, 8vmin, 200px);
       line-height: 1;
       padding: .1em .35em;
       border-radius: 16px;
@@ -90,7 +90,7 @@
       font-variant-numeric: tabular-nums;
       font-weight: 800;
       text-shadow: var(--digit-shadow);
-      font-size: clamp(48px, 14vw, 160px);
+      font-size: clamp(48px, 14vmin, 200px);
       line-height: 1;
     }
     .score.home { justify-self: start; }
