--- a/index.html
+++ b/index.html
@@ -75,14 +75,15 @@
       width:var(--logo-w); height:var(--logo-h);
       object-fit:contain; filter:drop-shadow(0 4px 8px rgba(0,0,0,.5));
     }
-    /* Left region center = 25% of board width minus clock_w/4; place logo centered there */
+    /* midpoint between left edge (0) and clock-left, minus half logo width */
     .logo.home{
-      left: calc(25% - (var(--clock-w) / 4) - (var(--logo-w) / 2));
+      left: calc( (50% - (var(--clock-w) / 2)) / 2 - (var(--logo-w) / 2) );
     }
-    /* Right region center = 75% of board width plus clock_w/4; place logo centered there */
+    /* midpoint between clock-right and right edge (100%), minus half logo width */
     .logo.away{
-      left: calc(75% + (var(--clock-w) / 4) - (var(--logo-w) / 2));
+      left: calc( (50% + (var(--clock-w) / 2) + 100%) / 2 - (var(--logo-w) / 2) );
     }
+    /* Left region center = 25% of board width minus clock_w/4; place logo centered there */
 
     /* Middle row: scores + sponsor */
     .middle{ display:grid; grid-template-columns:1fr auto 1fr; align-items:center; }
@@ -138,27 +139,32 @@
         --clock-h-p:34.722222;  /* 200/576  * 100 */
       }
 
-      .game-clock{
-        left:50%; transform:translateX(-50%);
-        width:calc(var(--clock-w-p) * 1cqw);
-        height:calc(var(--clock-h-p) * 1cqh);
-        font-size: min(
-          calc((var(--clock-w-p) * 1cqw) / 5.2),
-          calc(var(--clock-h-p) * 1cqh * 0.8)
-        );
-      }
+        .game-clock{
+          left: 50cqw;               /* use cqw so it matches logo math */
+          transform: translateX(-50%);
+          width: calc(var(--clock-w-p) * 1cqw);
+          height: calc(var(--clock-h-p) * 1cqh);
+          font-size: min(
+            calc((var(--clock-w-p) * 1cqw) / 5.2),
+            calc(var(--clock-h-p) * 1cqh * 0.8)
+          );
+        }
 
       .logo{
-        width:calc(var(--logo-w-p) * 1cqw);
-        height:calc(var(--logo-h-p) * 1cqh);
+        width:  calc(var(--logo-w-p) * 1cqw);
+        height: calc(var(--logo-h-p) * 1cqh);
       }
-      /* Left: center between left edge and clock-left */
+
+      /* midpoint between left edge and clock-left (all in cqw) */
       .logo.home{
-        left: calc(25cqw - (var(--clock-w-p) * 1cqw)/4 - (var(--logo-w-p) * 1cqw)/2);
+        left: calc( (50cqw - (var(--clock-w-p) * 1cqw)/2) / 2
+                     - (var(--logo-w-p) * 1cqw)/2 );
       }
-      /* Right: center between clock-right and right edge */
+
+      /* midpoint between clock-right and right edge (all in cqw) */
       .logo.away{
-        left: calc(75cqw + (var(--clock-w-p) * 1cqw)/4 - (var(--logo-w-p) * 1cqw)/2);
+        left: calc( (50cqw + (var(--clock-w-p) * 1cqw)/2 + 100cqw) / 2
+                   - (var(--logo-w-p) * 1cqw)/2 );
       }
 
       .sponsor img{
