--- a/index.html
+++ b/index.html
@@ -51,18 +51,13 @@
 
     .top{ display:grid; grid-template-columns:1fr auto 1fr; align-items:center; gap:clamp(8px,2vw,24px); }
 
-    /* === CLOCK: centered at top, fixed 460×200 box (responsive later) === */
     .game-clock{
       position:absolute; top:0; left:50%; transform:translateX(-50%);
       width:var(--clock-w); height:var(--clock-h);
       display:grid; place-items:center;
       font-variant-numeric:tabular-nums; letter-spacing:.04em; text-shadow:var(--digit-shadow);
       font-weight:700;
-      /* Auto-fit text inside box */
-      font-size: min(
-        calc(var(--clock-w) / 5.2),     /* width ÷ ~5 chars ("MM:SS") */
-        calc(var(--clock-h) * 0.8)      /* leave vertical breathing room */
-      );
+      font-size: min(calc(var(--clock-w)/5.2), calc(var(--clock-h)*0.8));
       line-height:1;
       padding:0; border-radius:16px; border:2px solid transparent;
       background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.02));
@@ -75,15 +70,14 @@
       width:var(--logo-w); height:var(--logo-h);
       object-fit:contain; filter:drop-shadow(0 4px 8px rgba(0,0,0,.5));
     }
-    /* midpoint between left edge (0) and clock-left, minus half logo width */
+    /* midpoint between left edge (0) and clock-left (50% - cw/2), minus half logo width */
     .logo.home{
       left: calc( (50% - (var(--clock-w) / 2)) / 2 - (var(--logo-w) / 2) );
     }
-    /* midpoint between clock-right and right edge (100%), minus half logo width */
+    /* midpoint between clock-right (50% + cw/2) and right edge (100%), minus half logo width */
     .logo.away{
-      left: calc( (50% + (var(--clock-w) / 2) + 100%) / 2 - (var(--logo-w) / 2) );
+      left: calc( ((50% + (var(--clock-w) / 2)) + 100%) / 2 - (var(--logo-w) / 2) );
     }
-    /* Left region center = 25% of board width minus clock_w/4; place logo centered there */
 
     /* Middle row: scores + sponsor */
     .middle{ display:grid; grid-template-columns:1fr auto 1fr; align-items:center; }
@@ -139,39 +133,36 @@
         --clock-h-p:34.722222;  /* 200/576  * 100 */
       }
 
-        .game-clock{
-          left: 50cqw;               /* use cqw so it matches logo math */
-          transform: translateX(-50%);
-          width: calc(var(--clock-w-p) * 1cqw);
-          height: calc(var(--clock-h-p) * 1cqh);
-          font-size: min(
-            calc((var(--clock-w-p) * 1cqw) / 5.2),
-            calc(var(--clock-h-p) * 1cqh * 0.8)
-          );
-        }
+      .game-clock{
+         left:50%; transform:translateX(-50%);
+         width: calc(var(--clock-w-p) * 1cqw);
+         height: calc(var(--clock-h-p) * 1cqh);
+         font-size: min(
+           calc((var(--clock-w-p) * 1cqw) / 5.2),
+           calc(var(--clock-h-p) * 1cqh * 0.8)
+         );
+      }
 
       .logo{
         width:  calc(var(--logo-w-p) * 1cqw);
         height: calc(var(--logo-h-p) * 1cqh);
       }
 
-      /* midpoint between left edge and clock-left (all in cqw) */
       .logo.home{
-        left: calc( (50cqw - (var(--clock-w-p) * 1cqw)/2) / 2
-                     - (var(--logo-w-p) * 1cqw)/2 );
+        left: calc( (50% - ( (var(--clock-w-p) * 1cqw) / 2 )) / 2
+                    - ( (var(--logo-w-p) * 1cqw) / 2 ) );
       }
 
-      /* midpoint between clock-right and right edge (all in cqw) */
       .logo.away{
-        left: calc( (50cqw + (var(--clock-w-p) * 1cqw)/2 + 100cqw) / 2
-                   - (var(--logo-w-p) * 1cqw)/2 );
+        left: calc( ( (50% + ( (var(--clock-w-p) * 1cqw) / 2 )) + 100% ) / 2
+                    - ( (var(--logo-w-p) * 1cqw) / 2 ) );
       }
 
       .sponsor img{
-        width:calc(var(--sponsor-w-p) * 1cqw);
-        height:calc(var(--sponsor-h-p) * 1cqh);
+        width:  calc(var(--sponsor-w-p) * 1cqw);
+        height: calc(var(--sponsor-h-p) * 1cqh);
       }
-    }
+  }
   </style>
 </head>
 <body>
