--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       /* Reference sizes (1024×576 design) */
       --clock-w:460px; --clock-h:200px;      /* clock box size */
       --logo-w:220px;  --logo-h:272px;       /* logo box size */
-      --gap-after-clock:20px;                /* kept for compatibility */
+      --sponsor-w:520px; --sponsor-h:254px;  /* sponsor box size */
+      --sponsor-gap:12px;                    /* gap under the top row */
     }
 
     /* Global: prevent horizontal scrollbars */
@@ -45,21 +46,22 @@
       box-shadow:0 20px 60px rgba(0,0,0,.45) inset, 0 10px 30px rgba(0,0,0,.35);
       background:rgba(13,71,161,.92); /* blue board */
 
-      /* enable container query units (cqw/cqh) */
-      container-type:size;
+      container-type:size; /* enable cqw/cqh */
     }
 
     .top{ display:grid; grid-template-columns:1fr auto 1fr; align-items:center; gap:clamp(8px,2vw,24px); }
 
+    /* === CLOCK: centered at top, fixed box === */
     .game-clock{
       position:absolute; top:0; left:50%; transform:translateX(-50%);
       width:var(--clock-w); height:var(--clock-h);
       display:grid; place-items:center;
       font-variant-numeric:tabular-nums; letter-spacing:.04em; text-shadow:var(--digit-shadow);
       font-weight:700;
+      /* Auto-fit text inside box */
       font-size: min(calc(var(--clock-w)/5.2), calc(var(--clock-h)*0.8));
       line-height:1;
-      padding:0; border-radius:16px; border:2px solid transparent;
+      border-radius:16px; border:2px solid transparent;
       background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.02));
       z-index:10;
     }
@@ -70,28 +72,40 @@
       width:var(--logo-w); height:var(--logo-h);
       object-fit:contain; filter:drop-shadow(0 4px 8px rgba(0,0,0,.5));
     }
-    /* midpoint between left edge (0) and clock-left (50% - cw/2), minus half logo width */
+    /* midpoint between left edge and clock-left, minus half logo width */
     .logo.home{
       left: calc( (50% - (var(--clock-w) / 2)) / 2 - (var(--logo-w) / 2) );
     }
-    /* midpoint between clock-right (50% + cw/2) and right edge (100%), minus half logo width */
+    /* midpoint between clock-right and right edge, minus half logo width */
     .logo.away{
       left: calc( ((50% + (var(--clock-w) / 2)) + 100%) / 2 - (var(--logo-w) / 2) );
     }
 
-    /* Middle row: scores + sponsor */
-    .middle{ display:grid; grid-template-columns:1fr auto 1fr; align-items:center; }
+    /* === SPONSOR: centered directly under the clock, same width as the clock === */
+    .sponsor-top{
+      position:absolute;
+      left:50%;
+      transform:translateX(-50%);
+      /* place below whichever is taller (logos vs clock) */
+      top: calc( max(var(--logo-h), var(--clock-h)) + var(--sponsor-gap) );
+      width: var(--clock-w);               /* <- lock to clock width */
+      display:grid; place-items:center;
+      z-index:5;
+    }
+    .sponsor-top img{
+      width: 100%;                          /* fill the clock-width box */
+      height: auto;                         /* keep aspect ratio */
+      object-fit: contain;
+      filter: drop-shadow(0 6px 16px rgba(0,0,0,.6));
+    }
+
+    /* Middle row: only scores now */
+    .middle{ display:grid; grid-template-columns:1fr 1fr; align-items:center; }
     .score{
       font-variant-numeric:tabular-nums; font-weight:800; text-shadow:var(--digit-shadow);
       font-size:clamp(48px, 14vmin, 200px); line-height:1;
     }
     .score.home{ justify-self:start; } .score.away{ justify-self:end; }
-
-    .sponsor{ opacity:.85; display:grid; place-items:center; }
-    .sponsor img{
-      width:520px; height:254px; object-fit:contain;
-      filter:drop-shadow(0 6px 16px rgba(0,0,0,.6));
-    }
 
     /* Bottom time-of-day */
     .bottom{ display:grid; place-items:center; }
@@ -124,45 +138,50 @@
     /* ===== Responsive scaling using container query units ===== */
     @supports (width: 1cqw){
       :root{
-        /* Percentages relative to 1024×576 reference */
+        /* Percentages relative to 1024×576 */
         --logo-w-p:21.484375;   /* 220/1024 * 100 */
         --logo-h-p:47.222222;   /* 272/576  * 100 */
         --sponsor-w-p:50.78125; /* 520/1024 * 100 */
         --sponsor-h-p:44.097222;/* 254/576  * 100 */
         --clock-w-p:44.921875;  /* 460/1024 * 100 */
         --clock-h-p:34.722222;  /* 200/576  * 100 */
+        --sponsor-gap-p: 2; /* keep your preferred vertical gap in % of board height */
       }
 
       .game-clock{
-         left:50%; transform:translateX(-50%);
-         width: calc(var(--clock-w-p) * 1cqw);
-         height: calc(var(--clock-h-p) * 1cqh);
-         font-size: min(
-           calc((var(--clock-w-p) * 1cqw) / 5.2),
-           calc(var(--clock-h-p) * 1cqh * 0.8)
-         );
+        width: calc(var(--clock-w-p) * 1cqw);
+        height: calc(var(--clock-h-p) * 1cqh);
+        left:50%; transform:translateX(-50%);
+        font-size: min(
+          calc((var(--clock-w-p) * 1cqw) / 5.2),
+          calc(var(--clock-h-p) * 1cqh * 0.8)
+        );
       }
 
       .logo{
-        width:  calc(var(--logo-w-p) * 1cqw);
+        width: calc(var(--logo-w-p) * 1cqw);
         height: calc(var(--logo-h-p) * 1cqh);
       }
-
       .logo.home{
         left: calc( (50% - ( (var(--clock-w-p) * 1cqw) / 2 )) / 2
                     - ( (var(--logo-w-p) * 1cqw) / 2 ) );
       }
-
       .logo.away{
         left: calc( ( (50% + ( (var(--clock-w-p) * 1cqw) / 2 )) + 100% ) / 2
                     - ( (var(--logo-w-p) * 1cqw) / 2 ) );
       }
 
-      .sponsor img{
-        width:  calc(var(--sponsor-w-p) * 1cqw);
-        height: calc(var(--sponsor-h-p) * 1cqh);
+      .sponsor-top{
+        top: calc( max( (var(--logo-h-p) * 1cqh), (var(--clock-h-p) * 1cqh) )
+                   + (var(--sponsor-gap-p) * 1cqh) );
+        width: calc(var(--clock-w-p) * 1cqw);   /* <- lock to clock width (responsive) */
       }
-  }
+
+      .sponsor-top img{
+        width: 100%;
+        height: auto;
+      }
+    }
   </style>
 </head>
 <body>
@@ -173,9 +192,11 @@
       <img id="awayLogo" class="logo away" alt="Away logo" />
     </div>
 
+    <!-- Sponsor centered directly under the clock -->
+    <div class="sponsor-top"><img id="sponsorLogo" alt="Sponsor logo" /></div>
+
     <div class="middle">
       <div class="score home" id="homeScore">0</div>
-      <div class="sponsor"><img id="sponsorLogo" alt="Sponsor logo" /></div>
       <div class="score away" id="awayScore">0</div>
     </div>
 
