--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
       font-variant-numeric: tabular-nums;
       color: var(--muted);
-      font-size: clamp(18px, 5vw, 40px);  /* same max as before */
+      font-size: min(40px, 5vmin); /* was: clamp(18px, 5vw, 40px) */
       letter-spacing: .12em;
       text-shadow: 0 0 10px rgba(0,0,0,.6);
       z-index: 4;
@@ -200,7 +200,7 @@
             + 100%
           ) / 2
         );
-        font-size: clamp(18px, 5cqw, 40px);
+        font-size: min(40px, 5cqw); /* was: clamp(18px, 5cqw, 40px) */
       }
     
       .game-clock{
