--- a/index.html
+++ b/index.html
@@ -254,6 +254,42 @@
         left: calc( ( (50% + ( (var(--clock-w-p) * 1cqw) / 2 )) + 100% ) / 2
                     - ( (var(--logo-w-p) * 1cqw) / 2 ) );
       }
+      /* === XML LAYERS === */
+      .xml-layers{
+        position:absolute; inset:0;
+        pointer-events:none;           /* let clicks pass through unless you change it */
+        z-index:12;                    /* above your base graphics, below fullscreen controls */
+        container-type:size;           /* so we can use cqw/cqh for font sizing */
+      }
+
+      /* generic item frame */
+      .xml-layers .item{
+        position:absolute; overflow:hidden;
+      }
+
+      /* text block defaults */
+      .xml-layers .text{
+        display:flex;                  /* for easy center/left/right + middle/top/bottom alignment */
+        line-height:1;
+        padding:0 .25rem;
+        word-break:break-word;
+      }
+
+      /* quick alignment helpers the JS applies */
+      .xml-layers .align-left   { justify-content:flex-start; text-align:left; }
+      .xml-layers .align-center { justify-content:center;     text-align:center; }
+      .xml-layers .align-right  { justify-content:flex-end;   text-align:right; }
+      .xml-layers .valign-top    { align-items:flex-start; }
+      .xml-layers .valign-middle { align-items:center; }
+      .xml-layers .valign-bottom { align-items:flex-end; }
+
+      /* let XML mode hide your built-in widgets (optional) */
+      body.xmlMode .top,
+      body.xmlMode .sponsor-top,
+      body.xmlMode .middle,
+      body.xmlMode .labels,
+      body.xmlMode .bottom,
+      body.xmlMode. controls { display: none ! important; }
     }
   </style>
 </head>
@@ -263,6 +299,8 @@
       <img id="homeLogo" class="logo home" alt="Home logo" />
       <div class="game-clock" id="gameClock">00:00</div>
       <img id="awayLogo" class="logo away" alt="Away logo" />
+      <!-- XML-driven overlay -->
+      <div id="xmlLayers" class="xml-layers" aria-label="XML Layers"></div>
     </div>
 
     <!-- Sponsor centered directly under the clock -->
@@ -296,6 +334,194 @@
   </div>
 
   <script>
+    /* ================= XML Layer Engine (targets 1024×576) =================
+     Usage:
+       - Put your XML next to this HTML (e.g. Football.xml)
+       - Open with:  index.html?xml=Football.xml&scene=GameClock
+         (scene is optional; first scene will be used if omitted)
+     Notes:
+       - The XML uses a 512×288 coordinate space; we scale everything ×2 to 1024×576.
+       - Y grows downward in CSS. In the XML, typical values are negative for "down",
+         so we convert with: top = (-y) * scaleY.
+    =========================================================================*/
+
+    (function(){
+      const params = new URLSearchParams(location.search);
+      const xmlUrl = params.get('xml');
+      const initialScene = params.get('scene') || null;
+
+      if (!xmlUrl) return;             // only activate if ?xml=... is present
+      document.body.classList.add('xmlMode');
+
+      const LAYERS = document.getElementById('xmlLayers');
+      const BOARD  = document.getElementById('board');
+
+      // Target design space (double the XML's 512×288)
+      const TARGET_W = 1024, TARGET_H = 576;
+
+      // Parse "r;g;b;a" → rgba(r,g,b,a/255)
+      const parseColor = (s) => {
+        if (!s) return null;
+        const [r,g,b,a] = s.split(';').map(n => +n || 0);
+        return `rgba(${r},${g},${b},${(a??255)/255})`;
+      };
+
+      // Parse "Family;Size" → {family, sizePx}
+      const parseFont = (s) => {
+        if (!s) return { family: `'Droid Sans Mono', monospace`, sizePx: 24 };
+        const [family, sz] = s.split(';');
+        return { family: family || `'Droid Sans Mono', monospace`, sizePx: +(sz||24) };
+      };
+
+      // Map XML textalignment to our flex helpers
+      const alignClasses = (align) => {
+        const a = (align || '').toLowerCase();
+        const h = a.includes('left') ? 'align-left' : a.includes('right') ? 'align-right' : 'align-center';
+        const v = a.includes('top') ? 'valign-top' : a.includes('bottom') ? 'valign-bottom' : 'valign-middle';
+        return `${h} ${v}`;
+      };
+
+      // Convert absolute px in TARGET space to % so it scales with the board
+      const toPct = (px, dim) => (px / dim) * 100;
+
+      // Render a given <Scene>
+      function renderScene(sceneEl){
+        LAYERS.innerHTML = ''; // clear old scene
+
+        // Try to infer the XML's base canvas size from a Panel, else fall back to 512×288
+        let baseW = 512, baseH = 288;
+        const panel = sceneEl.querySelector('Item[prefab="Panel"]');
+        if (panel){
+          baseW = +(panel.getAttribute('width') || baseW);
+          baseH = +(panel.getAttribute('height') || baseH);
+        }
+
+        const sx = TARGET_W / baseW;
+        const sy = TARGET_H / baseH;
+
+        const items = [...sceneEl.querySelectorAll('Item')];
+
+        for (const it of items){
+          const prefab = it.getAttribute('prefab') || 'Unknown';
+          const name   = it.getAttribute('name')   || prefab;
+
+          // XML coords: x to the right; y is typically negative for "down".
+          const x = +(it.getAttribute('x') || 0);
+          const y = +(it.getAttribute('y') || 0);
+          const w = +(it.getAttribute('width')  || 0);
+          const h = +(it.getAttribute('height') || 0);
+
+          const leftPx = x * sx;
+          const topPx  = (-y) * sy;     // key inversion: XML "down" → CSS positive down
+          const widthPx  = w * sx;
+          const heightPx = h * sy;
+
+          // Common wrapper
+          const el = document.createElement(prefab === 'Text' ? 'div' : (prefab === 'Image' ? 'img' : 'div'));
+          el.className = 'item';
+
+          // Percent-based sizing so it scales with the board
+          el.style.left   = toPct(leftPx, TARGET_W) + '%';
+          el.style.top    = toPct(topPx,  TARGET_H) + '%';
+          el.style.width  = toPct(widthPx, TARGET_W) + '%';
+          el.style.height = toPct(heightPx, TARGET_H) + '%';
+
+          // Per prefab behavior
+          if (prefab === 'Panel'){
+            // Background color fill
+            const bg = parseColor(it.getAttribute('imagecolor'));
+            if (bg) el.style.background = bg;
+            el.style.borderRadius = '0px';
+            el.style.pointerEvents = 'none';
+          }
+          else if (prefab === 'Image'){
+            const src = it.getAttribute('defaultimage') || '';
+            const img = el; // already <img>
+            img.decoding = 'async';
+            img.loading = 'eager';
+            if (src) img.src = src;
+            img.style.objectFit = 'contain';
+            img.style.filter = 'drop-shadow(0 4px 8px rgba(0,0,0,.35))';
+            img.alt = name;
+            // If you want XML images to be interactable, remove pointer-events none below
+          }
+          else if (prefab === 'Text'){
+            el.classList.add('text');
+
+            // Colors & font
+            const color = parseColor(it.getAttribute('textcolor')) || 'rgba(255,255,255,.95)';
+            const font  = parseFont(it.getAttribute('font'));
+            el.style.color = color;
+            el.style.fontFamily = font.family + ', monospace';
+            el.style.fontWeight = 700;
+
+            // Alignment
+            el.classList.add(...alignClasses(it.getAttribute('textalignment')).split(' '));
+
+            // Content
+            el.textContent = it.getAttribute('defaulttext') || '';
+
+            // Respect min/max font sizes from XML (scaled to 1024×576),
+            // and auto-fit roughly to the item box height.
+            const minPx = (+(it.getAttribute('minfontsize') || 8))  * (TARGET_H / baseH);
+            const maxPx = (+(it.getAttribute('maxfontsize') || 200)) * (TARGET_H / baseH);
+
+            // Use container query height to scale with board (height% * 1cqh)
+            const hPct = toPct(heightPx, TARGET_H);
+            el.style.setProperty('--box-h-pct', hPct);
+            el.style.fontSize = `clamp(${minPx}px, calc(var(--box-h-pct) * 1cqh * 0.70), ${maxPx}px)`;
+            el.style.textShadow = '0 0 12px rgba(0,0,0,.35)';
+          }
+          else {
+            // Fallback: show a faint box with the prefab name (you can extend for Video, etc.)
+            el.style.outline = '1px dashed rgba(255,255,255,.25)';
+            el.style.color = 'rgba(255,255,255,.7)';
+            el.style.display = 'flex';
+            el.style.alignItems = 'center';
+            el.style.justifyContent = 'center';
+            el.textContent = name || prefab;
+          }
+
+          LAYERS.appendChild(el);
+        }
+      }
+
+      // Fetch & parse XML
+      async function loadAndRender(){
+        let xmlText = '';
+        try{
+          const res = await fetch(xmlUrl, { cache:'no-store' });
+          xmlText = await res.text();
+        } catch(e){
+          console.error('Failed to load XML:', e);
+          return;
+        }
+        const dom = new DOMParser().parseFromString(xmlText, 'text/xml');
+
+        // Pick scene
+        let sceneEl = null;
+        if (initialScene){
+          sceneEl = dom.querySelector(`Scene[scenename="${CSS.escape(initialScene)}"]`);
+        }
+        if (!sceneEl){
+          sceneEl = dom.querySelector('Scene');
+        }
+        if (!sceneEl){
+          console.warn('No <Scene> found in XML.');
+          return;
+        }
+        renderScene(sceneEl);
+
+        // (Optional) allow switching scenes quickly with ?scene=… or window.scene='Name'
+        window.setXMLScene = (name) => {
+          const next = dom.querySelector(`Scene[scenename="${CSS.escape(name)}"]`);
+          if (next) renderScene(next);
+        };
+      }
+
+      loadAndRender();
+    })();
+
     // ===== Utilities
     const qs = (s) => document.querySelector(s);
     const pad2 = (n) => String(n).padStart(2, '0');
